--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     
     <meta name="description" content="Where Imagination Meets Intelligence. 
     Revolutionizing storytelling with AI-powered media production. Creating boundary-breaking content at the speed of thought. We define the future.">
-    <meta name="keywords" content="Kiimala, Design, Website, Skills, Software, Project, Production, AI, Development, Engineering">
+    <meta name="keywords" content="Design, Software Skills, Digital Media, Projects, e-Commerce, Production, AI Tools, Web Development, Engineering">
     <meta name="author" content="Jarno Kiimala">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="Cache-Control" content="max-age=31536000">
@@ -112,42 +112,42 @@
                 
                 <div class="carousel" id="carousel" role="region" aria-label="Logo Carousel">
                     <div class="carousel-container" id="carouselContainer" role="list">
-                        <div class="carousel-item" role="listitem"><img src="img/html.webp" alt="html">
-                        <div class="carousel-item" role="listitem"><img src="img/css.webp" alt="CSS">
-                        <div class="carousel-item" role="listitem"><img src="img/JS.webp" alt="JavaScript">
-                        <div class="carousel-item" role="listitem"><img src="img/bootstrap.webp" alt="bootstrap">
-                        <div class="carousel-item" role="listitem"><img src="img/pythonlogo.webp" alt="python">
-                        <div class="carousel-item" role="listitem"><img src="img/reactlogo.webp" alt="react">
-                        <div class="carousel-item" role="listitem"><img src="img/tailwind.webp" alt="tailwind">
-                        <div class="carousel-item" role="listitem"><img src="img/sass.webp" alt="sass">
-                        <div class="carousel-item" role="listitem"><img src="img/visualstudio.webp" alt="vscode">
-                        <div class="carousel-item" role="listitem"><img src="img/aistudio.webp" alt="aistudio">
-                        <div class="carousel-item" role="listitem"><img src="img/LeapAI.webp" alt="Leap ai">
-                        <div class="carousel-item" role="listitem"><img src="img/replit.webp" alt="replit ai">
-                        <div class="carousel-item" role="listitem"><img src="img/chatgpt.webp" alt="chatgpt ai">
-                        <div class="carousel-item" role="listitem"><img src="img/bolt.webp" alt="bolt.new ai">
+                        <div class="carousel-item" role="listitem"><img src="img/html.webp" alt="html - Web Development - Software Skills">
+                        <div class="carousel-item" role="listitem"><img src="img/css.webp" alt="CSS - Web Development - Software Skills">
+                        <div class="carousel-item" role="listitem"><img src="img/JS.webp" alt="JavaScript - Web Development - Software Skills">
+                        <div class="carousel-item" role="listitem"><img src="img/bootstrap.webp" alt="bootstrap - Web Development - Software Skills">
+                        <div class="carousel-item" role="listitem"><img src="img/pythonlogo.webp" alt="python - Web Development - Software Skills">
+                        <div class="carousel-item" role="listitem"><img src="img/reactlogo.webp" alt="react - Web Development - Software Skills">
+                        <div class="carousel-item" role="listitem"><img src="img/tailwind.webp" alt="tailwind - Web Development - Software Skills">
+                        <div class="carousel-item" role="listitem"><img src="img/sass.webp" alt="sass - Web Development - Software Skills">
+                        <div class="carousel-item" role="listitem"><img src="img/visualstudio.webp" alt="vscode - Web Development - Software Skills">
+                        <div class="carousel-item" role="listitem"><img src="img/aistudio.webp" alt="aistudio - Web Development - Software Skills">
+                        <div class="carousel-item" role="listitem"><img src="img/LeapAI.webp" alt="Leap AI - AI Tools">
+                        <div class="carousel-item" role="listitem"><img src="img/replit.webp" alt="replit AI - AI Tools">
+                        <div class="carousel-item" role="listitem"><img src="img/chatgpt.webp" alt="chatgpt AI - AI Tools">
+                        <div class="carousel-item" role="listitem"><img src="img/bolt.webp" alt="bolt.new AI - AI Tools">
                         <div class="carousel-item" role="listitem"><img src="img/github.webp" alt="github">
                         <div class="carousel-item" role="listitem"><img src="img/git.webp" alt="git">
-                        <div class="carousel-item" role="listitem"><img src="img/githubCopilot.webp" alt="githubCopilot">
+                        <div class="carousel-item" role="listitem"><img src="img/githubCopilot.webp" alt="githubCopilot - AI Tools">
                         <div class="carousel-item" role="listitem"><img src="img/mongodb.webp" alt="mongoDB">
                         <div class="carousel-item" role="listitem"><img src="img/jira.webp" alt="jira">
                         <div class="carousel-item" role="listitem"><img src="img/trello.webp" alt="trello">
                         <div class="carousel-item" role="listitem"><img src="img/miro.webp" alt="miro">
                         <div class="carousel-item" role="listitem"><img src="img/slack.webp" alt="slack">
                         <div class="carousel-item" role="listitem"><img src="img/discord.webp" alt="discord">
-                        <div class="carousel-item" role="listitem"><img src="img/solikkalogo.webp" alt="solidworks">
-                        <div class="carousel-item" role="listitem"><img src="img/inventorlogo.webp" alt="inventorPro">
-                        <div class="carousel-item" role="listitem"><img src="img/adobelogo.webp" alt="adobeCC">
-                        <div class="carousel-item" role="listitem"><img src="img/AE.webp" alt="adobeAfterEffects">
-                        <div class="carousel-item" role="listitem"><img src="img/AI.webp" alt="adobeIllustrator">
-                        <div class="carousel-item" role="listitem"><img src="img/PR.webp" alt="adobePremierePro">
-                        <div class="carousel-item" role="listitem"><img src="img/PS.webp" alt="adobePhotoshop">
-                        <div class="carousel-item" role="listitem"><img src="img/canva.webp" alt="canva">
-                        <div class="carousel-item" role="listitem"><img src="img/officelogo.webp" alt="office">
-                        <div class="carousel-item" role="listitem"><img src="img/wordpresslogo.webp" alt="wordpress">
-                        <div class="carousel-item" role="listitem"><img src="img/woo2.webp" alt="WooCommerce">
-                        <div class="carousel-item" role="listitem"><img src="img/shopify.webp" alt="Shopify">
-                        <div class="carousel-item" role="listitem"><img src="img/cash.webp" alt="MyCashflow">
+                        <div class="carousel-item" role="listitem"><img src="img/solikkalogo.webp" alt="solidworks - Software Skills">
+                        <div class="carousel-item" role="listitem"><img src="img/inventorlogo.webp" alt="inventorPro - Software Skills">
+                        <div class="carousel-item" role="listitem"><img src="img/adobelogo.webp" alt="adobeCC - Design - Software Skills">
+                        <div class="carousel-item" role="listitem"><img src="img/AE.webp" alt="adobeAfterEffects - Design - Software Skills">
+                        <div class="carousel-item" role="listitem"><img src="img/AI.webp" alt="adobeIllustrator - Design - Software Skills">
+                        <div class="carousel-item" role="listitem"><img src="img/PR.webp" alt="adobePremierePro - Design - Software Skills">
+                        <div class="carousel-item" role="listitem"><img src="img/PS.webp" alt="adobePhotoshop - Design - Software Skills">
+                        <div class="carousel-item" role="listitem"><img src="img/canva.webp" alt="Canva - Design">
+                        <div class="carousel-item" role="listitem"><img src="img/officelogo.webp" alt="Office - Software Skills">
+                        <div class="carousel-item" role="listitem"><img src="img/wordpresslogo.webp" alt="WordPress - Software Skills">
+                        <div class="carousel-item" role="listitem"><img src="img/woo2.webp" alt="WooCommerce - Software Skills">
+                        <div class="carousel-item" role="listitem"><img src="img/shopify.webp" alt="Shopify - Software Skills">
+                        <div class="carousel-item" role="listitem"><img src="img/cash.webp" alt="MyCashflow - Software Skills">
                         <!-- KOPIOT (Samat logot uudestaan saumatonta siirtymää varten) -->
                         <div class="carousel-item" role="listitem"><img src="img/html.webp" alt="html">
                         <div class="carousel-item" role="listitem"><img src="img/css.webp" alt="CSS">
@@ -158,14 +158,14 @@
                         <div class="carousel-item" role="listitem"><img src="img/tailwind.webp" alt="tailwind">
                         <div class="carousel-item" role="listitem"><img src="img/sass.webp" alt="sass">
                         <div class="carousel-item" role="listitem"><img src="img/visualstudio.webp" alt="vscode">
-                        <div class="carousel-item" role="listitem"><img src="img/aistudio.webp" alt="aistudio">
-                        <div class="carousel-item" role="listitem"><img src="img/LeapAI.webp" alt="Leap ai">
-                        <div class="carousel-item" role="listitem"><img src="img/replit.webp" alt="replit ai">
-                        <div class="carousel-item" role="listitem"><img src="img/chatgpt.webp" alt="chatgpt ai">
-                        <div class="carousel-item" role="listitem"><img src="img/bolt.webp" alt="bolt.new ai">
+                        <div class="carousel-item" role="listitem"><img src="img/aistudio.webp" alt="aistudio - AI Tools">
+                        <div class="carousel-item" role="listitem"><img src="img/LeapAI.webp" alt="Leap ai - AI Tools">
+                        <div class="carousel-item" role="listitem"><img src="img/replit.webp" alt="replit ai - AI Tools">
+                        <div class="carousel-item" role="listitem"><img src="img/chatgpt.webp" alt="chatgpt ai - AI Tools">
+                        <div class="carousel-item" role="listitem"><img src="img/bolt.webp" alt="bolt.new ai - AI Tools">
                         <div class="carousel-item" role="listitem"><img src="img/github.webp" alt="github">
                         <div class="carousel-item" role="listitem"><img src="img/git.webp" alt="git">
-                        <div class="carousel-item" role="listitem"><img src="img/githubCopilot.webp" alt="githubCopilot">
+                        <div class="carousel-item" role="listitem"><img src="img/githubCopilot.webp" alt="githubCopilot - AI Tools">
                         <div class="carousel-item" role="listitem"><img src="img/mongodb.webp" alt="mongoDB">
                         <div class="carousel-item" role="listitem"><img src="img/jira.webp" alt="jira">
                         <div class="carousel-item" role="listitem"><img src="img/trello.webp" alt="trello">
@@ -181,10 +181,10 @@
                         <div class="carousel-item" role="listitem"><img src="img/PS.webp" alt="adobePhotoshop">
                         <div class="carousel-item" role="listitem"><img src="img/canva.webp" alt="canva">
                         <div class="carousel-item" role="listitem"><img src="img/officelogo.webp" alt="office">
-                        <div class="carousel-item" role="listitem"><img src="img/wordpresslogo.webp" alt="wordpress">
-                        <div class="carousel-item" role="listitem"><img src="img/woo2.webp" alt="WooCommerce">
-                        <div class="carousel-item" role="listitem"><img src="img/shopify.webp" alt="Shopify">
-                        <div class="carousel-item" role="listitem"><img src="img/cash.webp" alt="MyCashflow">
+                        <div class="carousel-item" role="listitem"><img src="img/wordpresslogo.webp" alt="wordpress - e-Commerce">
+                        <div class="carousel-item" role="listitem"><img src="img/woo2.webp" alt="WooCommerce - e-Commerce">
+                        <div class="carousel-item" role="listitem"><img src="img/shopify.webp" alt="Shopify - e-Commerce">
+                        <div class="carousel-item" role="listitem"><img src="img/cash.webp" alt="MyCashflow - e-Commerce">
                     </div></div></div></div></div></div></div></div></div></div></div></div></div></div></div></div></div></div></div></div></div></div></div></div></div></div></div>
                 </div></div></div></div></div></div></div></div></div></div></div></div></div></div></div></div></div></div></div>
                 </div></div></div></div></div></div></div></div></div></div></div></div></div></div></div></div></div></div></div></div></div></div></div></div></div></div>
@@ -245,7 +245,7 @@
                     <h5>Industrial Engineering and Management<span> - Lapland University of Applied Sciences</span></h5>
                     <img src="img/lapinamk.webp" alt="Lapland University of Applied Sciences - Jarno Kiimala - Industrial Management - Tuotantotalous">
                     <p>
-                        Bachelor of Engineering (B.Eng). Subject of Thesis: Marketing Research of Steel Abrasive Blast
+                        Bachelor of Engineering (B.Eng). Marketing Research of Steel Abrasive Blast
                         Room and Powder Coat Booth Commissioned by Tornion KaMa-Palvelut Oy.
                     </p>
                 </div>
