--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     
     <meta name="description" content="Where Imagination Meets Intelligence. 
-    Revolutionizing storytelling with AI-powered media production. Creating boundary-breaking content at the speed of thought. We define the future.">
+    Revolutionizing storytelling with AI-powered media production. We define the future.">
     <meta name="keywords" content="Design, Software Skills, Digital Media, Projects, e-Commerce, Production, AI Tools, Web Development, Engineering">
     <meta name="author" content="Jarno Kiimala">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
