--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
                 
                 
                 <div class="image" id="image"> 
-                    <img src="img/AIpic.webp" id="main-image" alt="AI-Powered Digital Media Creation for Businesses.">
+                    <img src="img/AIpic2.webp" id="main-image" alt="AI-Powered Digital Media Creation for Businesses.">
                 </div>
             </div>
             <div class="right-header">
