--- a/index.html
+++ b/index.html
@@ -47,6 +47,9 @@
    
     <title>Jarno Kiimala | AI-Powered Digital Media for Businesses.</title>
 
+    <!-- Google Fonts -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 
     <link rel="canonical" href="https://jkiimala.github.io/">
     <link rel="apple-touch-icon" sizes="152x152" href="https://img.icons8.com/color/152x152/anonymous-mask.png">
