--- a/index.html
+++ b/index.html
@@ -44,7 +44,6 @@
     <meta name="twitter:description" content="Jarno Kiimala | AI-Powered Digital Media for Businesses." />
     <meta name="twitter:image" content="https://jkiimala.github.io/" />
 
-   
     <title>Jarno Kiimala | AI-Powered Digital Media for Businesses.</title>
 
     <!-- Google Fonts -->
@@ -945,6 +944,20 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
             <h4 class="stat-title">Vibe Coding & Misc Projects</h4>
 
             <div class="portfolios">
+
+                <div class="portfolio-item">
+                    
+                    <div class="image">
+                        <img src="img/AImedia.webp" alt="Ai Media Website - Web Development - Jarno Kiimala">
+
+                    </div>
+                    <div class="hover-items">
+                        <h3>AI Media Website - SOON</h3>
+                        <!--<div class="icons">
+                           <a href="#" id="AImedia" target="_blank" rel="noopener noreferrer" class="icon">
+                                <i class="fas fa-link"></i></a> 
+                    </div>  -->
+                </div></div>
 
 
                <div class="portfolio-item">
