--- a/index.html
+++ b/index.html
@@ -197,7 +197,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                     <div class="tl-icon">
                         <i class="fas fa-briefcase"></i>
                     </div>
-                    <h5>MERN - FullStack Web Developer & Designer<span> - freeCodeCamp | Online Course</span></h5>
+                    <h5>MERN - FullStack Web Developer & UI/UX-Designer<span> - freeCodeCamp | Online Course</span></h5>
                     <img src="img/mern.webp" alt="freeCodeCamp - Jarno Kiimala - FullStack Developer">
                     <p>
                         MongoDB, Express.js, React, Node.js & Next.js, TypeScript, SQL Databases, UI Design and Testing
@@ -1511,7 +1511,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                                     <span>Expertise</span>
                                 </div>
                                 <p>
-                                    Web Development • AI • Digital Media
+                                    Web Development • AI • UI/UX-Design
                                 </p>
                             </div>
                         </div>
