--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
         <div class="left-header">
                             
             <div class="image" id="image"> 
-                <img src="img/Aimage2.png" id="main-image" alt="AI-Powered Digital Media Creation for Businesses.">
+                <img src="img/Aimage3.webp" id="main-image" alt="AI-Powered Digital Media Creation for Businesses.">
             </div>
         </div>
         <div class="right-header">
