--- a/index.html
+++ b/index.html
@@ -34,12 +34,15 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 
+    <link rel="preload" href="styles/styles.css" as="style"/>
+    <link rel="preload" href="app.js" as="script"/>
+
     <link rel="canonical" href="https://jkiimala.github.io/">
-    <link rel="apple-touch-icon" sizes="152x152" href="https://img.icons8.com/color/152x152/anonymous-mask.png">
-    <link rel="icon" type="image/x-icon" href="img/favicon.ico">
-    <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
-    <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
-    <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
+
+    <!-- FAVICON SVG --> 
+    <link rel="icon" type="image/svg+xml" href="img/favicon.svg">
+
+    <!-- CSS STYLES -->
     <link rel="stylesheet" href="styles/styles.css">
     
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.1/css/all.min.css">
