--- a/index.html
+++ b/index.html
@@ -30,9 +30,9 @@
 
     <title>Jarno Kiimala | AI-Powered Digital Media for Businesses.</title>
 
-    <!-- Google Fonts -->
+    <!-- Google Fonts 
     <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>-->
 
     <link rel="preload" href="styles/styles.css" as="style"/>
     <link rel="preload" href="app.js" as="script"/>
